crates/flow-backend-llvm/tests/snapshots/golden_ll__capture_fold.snap
---
source: crates/flow-backend-llvm/tests/golden_ll.rs
expression: ll
---
; flow-backend-llvm emitted module
declare void @flow_print_i32(i32, i1 zeroext)
declare void @flow_print_i64(i64, i1 zeroext)
declare void @flow_print_u8(i8 zeroext, i1 zeroext)
declare void @flow_print_bool(i1 zeroext, i1 zeroext)
declare void @flow_print_f32(float, i1 zeroext)
declare void @flow_print_f64(double, i1 zeroext)
declare void @flow_print_str(ptr, i64, i1 zeroext)
declare void @flow_trap(i32) noreturn
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)

define internal void @flow_main() {
entry:
  %o2 = alloca [3 x i32]
  %o3 = alloca { i32, [3 x i32] }
  %o4 = alloca i32
  %o5 = alloca [3 x i32]
  %o6 = alloca { i32, i32, ptr }
  %o7 = alloca i32
  %o8 = alloca i32
  %s13 = alloca i32
  %s14 = alloca i64
  %s23 = alloca { i32, i32, i32 }
  %t0 = getelementptr { i32, i32, ptr }, ptr %o6, i32 0, i32 0
  store i32 3, ptr %t0
  %t1 = getelementptr [3 x i32], ptr %o2, i64 0, i64 0
  store i32 1, ptr %t1
  %t2 = getelementptr [3 x i32], ptr %o2, i64 0, i64 1
  store i32 2, ptr %t2
  %t3 = getelementptr [3 x i32], ptr %o2, i64 0, i64 2
  store i32 3, ptr %t3
  %t4 = getelementptr { i32, [3 x i32] }, ptr %o3, i32 0, i32 0
  store i32 0, ptr %t4
  %t5 = getelementptr { i32, [3 x i32] }, ptr %o3, i32 0, i32 1
  call void @llvm.memcpy.p0.p0.i64(ptr %t5, ptr %o2, i64 ptrtoint (ptr getelementptr ([3 x i32], ptr null, i64 1) to i64), i1 false)
  %t6 = getelementptr { i32, [3 x i32] }, ptr %o3, i32 0, i32 0
  %t7 = load i32, ptr %t6
  store i32 %t7, ptr %o4
  call void @llvm.memcpy.p0.p0.i64(ptr %o5, ptr %o2, i64 ptrtoint (ptr getelementptr ([3 x i32], ptr null, i64 1) to i64), i1 false)
  %t8 = load i32, ptr %o4
  %t9 = getelementptr { i32, i32, ptr }, ptr %o6, i32 0, i32 1
  store i32 %t8, ptr %t9
  %t10 = getelementptr { i32, i32, ptr }, ptr %o6, i32 0, i32 2
  store ptr %o5, ptr %t10
  %t11 = getelementptr { i32, i32, ptr }, ptr %o6, i32 0, i32 1
  %t12 = load i32, ptr %t11
  store i32 %t12, ptr %s13
  store i64 0, ptr %s14
  br label %bb15
bb15:
  %t18 = load i64, ptr %s14
  %t19 = icmp uge i64 %t18, 3
  br i1 %t19, label %bb17, label %bb16
bb16:
  %t20 = getelementptr [3 x i32], ptr %o5, i64 0, i64 %t18
  %t21 = load i32, ptr %t20
  %t22 = load i32, ptr %s13
  %t24 = getelementptr { i32, i32, ptr }, ptr %o6, i32 0, i32 0
  %t25 = load i32, ptr %t24
  %t26 = getelementptr { i32, i32, i32 }, ptr %s23, i32 0, i32 0
  store i32 %t25, ptr %t26
  %t27 = getelementptr { i32, i32, i32 }, ptr %s23, i32 0, i32 1
  store i32 %t22, ptr %t27
  %t28 = getelementptr { i32, i32, i32 }, ptr %s23, i32 0, i32 2
  store i32 %t21, ptr %t28
  %t29 = load { i32, i32, i32 }, ptr %s23
  %t30 = call i32 @fn1({ i32, i32, i32 } %t29)
  store i32 %t30, ptr %s13
  %t31 = add i64 %t18, 1
  store i64 %t31, ptr %s14
  br label %bb15
bb17:
  %t32 = load i32, ptr %s13
  store i32 %t32, ptr %o7
  %t33 = load i32, ptr %o7
  store i32 %t33, ptr %o8
  %t34 = load i32, ptr %o8
  call void @flow_print_i32(i32 %t34, i1 zeroext true)
  ret void
}

define internal i32 @fn1({ i32, i32, i32 } %arg) readonly nounwind willreturn {
entry:
  %o0 = alloca { i32, i32, i32 }
  %o1 = alloca i32
  %o2 = alloca i32
  %o3 = alloca i32
  %o4 = alloca i32
  %o5 = alloca { i32, i32 }
  %o6 = alloca i32
  %o7 = alloca { i32, i32 }
  store { i32, i32, i32 } %arg, ptr %o0
  %t0 = getelementptr { i32, i32, i32 }, ptr %o0, i32 0, i32 0
  %t1 = load i32, ptr %t0
  store i32 %t1, ptr %o2
  %t2 = getelementptr { i32, i32, i32 }, ptr %o0, i32 0, i32 1
  %t3 = load i32, ptr %t2
  store i32 %t3, ptr %o3
  %t4 = getelementptr { i32, i32, i32 }, ptr %o0, i32 0, i32 2
  %t5 = load i32, ptr %t4
  store i32 %t5, ptr %o4
  %t6 = load i32, ptr %o2
  %t7 = getelementptr { i32, i32 }, ptr %o5, i32 0, i32 1
  store i32 %t6, ptr %t7
  %t8 = load i32, ptr %o3
  %t9 = getelementptr { i32, i32 }, ptr %o7, i32 0, i32 0
  store i32 %t8, ptr %t9
  %t10 = load i32, ptr %o4
  %t11 = getelementptr { i32, i32 }, ptr %o5, i32 0, i32 0
  store i32 %t10, ptr %t11
  %t12 = getelementptr { i32, i32 }, ptr %o5, i32 0, i32 0
  %t13 = load i32, ptr %t12
  %t14 = getelementptr { i32, i32 }, ptr %o5, i32 0, i32 1
  %t15 = load i32, ptr %t14
  %t16 = mul i32 %t13, %t15
  store i32 %t16, ptr %o6
  %t17 = load i32, ptr %o6
  %t18 = getelementptr { i32, i32 }, ptr %o7, i32 0, i32 1
  store i32 %t17, ptr %t18
  %t19 = getelementptr { i32, i32 }, ptr %o7, i32 0, i32 0
  %t20 = load i32, ptr %t19
  %t21 = getelementptr { i32, i32 }, ptr %o7, i32 0, i32 1
  %t22 = load i32, ptr %t21
  %t23 = add i32 %t20, %t22
  store i32 %t23, ptr %o1
  %t24 = load i32, ptr %o1
  ret i32 %t24
}

define i32 @main() {
entry:
  call void @flow_main()
  ret i32 0
}
