crates/flow-backend-llvm/tests/snapshots/golden_ll__capture_map.snap
---
source: crates/flow-backend-llvm/tests/golden_ll.rs
expression: ll
---
; flow-backend-llvm emitted module
declare void @flow_print_i32(i32, i1 zeroext)
declare void @flow_print_i64(i64, i1 zeroext)
declare void @flow_print_u8(i8 zeroext, i1 zeroext)
declare void @flow_print_bool(i1 zeroext, i1 zeroext)
declare void @flow_print_f32(float, i1 zeroext)
declare void @flow_print_f64(double, i1 zeroext)
declare void @flow_print_str(ptr, i64, i1 zeroext)
declare void @flow_trap(i32) noreturn
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)

define internal void @flow_main() {
entry:
  %o2 = alloca [3 x i32]
  %o3 = alloca { i32, ptr }
  %o4 = alloca [3 x i32]
  %o5 = alloca { ptr, i32 }
  %o6 = alloca i32
  %o7 = alloca i32
  %s6 = alloca i64
  %s14 = alloca { i32, i32 }
  %t0 = getelementptr { i32, ptr }, ptr %o3, i32 0, i32 0
  store i32 3, ptr %t0
  %t1 = getelementptr [3 x i32], ptr %o2, i64 0, i64 0
  store i32 1, ptr %t1
  %t2 = getelementptr [3 x i32], ptr %o2, i64 0, i64 1
  store i32 2, ptr %t2
  %t3 = getelementptr [3 x i32], ptr %o2, i64 0, i64 2
  store i32 3, ptr %t3
  %t4 = getelementptr { ptr, i32 }, ptr %o5, i32 0, i32 1
  store i32 1, ptr %t4
  %t5 = getelementptr { i32, ptr }, ptr %o3, i32 0, i32 1
  store ptr %o2, ptr %t5
  store i64 0, ptr %s6
  br label %bb7
bb7:
  %t10 = load i64, ptr %s6
  %t11 = icmp uge i64 %t10, 3
  br i1 %t11, label %bb9, label %bb8
bb8:
  %t12 = getelementptr [3 x i32], ptr %o2, i64 0, i64 %t10
  %t13 = load i32, ptr %t12
  %t15 = getelementptr { i32, ptr }, ptr %o3, i32 0, i32 0
  %t16 = load i32, ptr %t15
  %t17 = getelementptr { i32, i32 }, ptr %s14, i32 0, i32 0
  store i32 %t16, ptr %t17
  %t18 = getelementptr { i32, i32 }, ptr %s14, i32 0, i32 1
  store i32 %t13, ptr %t18
  %t19 = load { i32, i32 }, ptr %s14
  %t20 = call i32 @fn1({ i32, i32 } %t19)
  %t21 = getelementptr [3 x i32], ptr %o4, i64 0, i64 %t10
  store i32 %t20, ptr %t21
  %t22 = add i64 %t10, 1
  store i64 %t22, ptr %s6
  br label %bb7
bb9:
  %t23 = getelementptr { ptr, i32 }, ptr %o5, i32 0, i32 0
  store ptr %o4, ptr %t23
  %t24 = getelementptr { ptr, i32 }, ptr %o5, i32 0, i32 1
  %t25 = load i32, ptr %t24
  %t26 = sext i32 %t25 to i64
  %t27 = getelementptr [3 x i32], ptr %o4, i64 0, i64 %t26
  %t28 = load i32, ptr %t27
  store i32 %t28, ptr %o6
  %t29 = load i32, ptr %o6
  store i32 %t29, ptr %o7
  %t30 = load i32, ptr %o7
  call void @flow_print_i32(i32 %t30, i1 zeroext true)
  ret void
}

define internal i32 @fn1({ i32, i32 } %arg) readonly nounwind willreturn {
entry:
  %o0 = alloca { i32, i32 }
  %o1 = alloca i32
  %o2 = alloca i32
  %o3 = alloca i32
  %o4 = alloca { i32, i32 }
  store { i32, i32 } %arg, ptr %o0
  %t0 = getelementptr { i32, i32 }, ptr %o0, i32 0, i32 0
  %t1 = load i32, ptr %t0
  store i32 %t1, ptr %o2
  %t2 = getelementptr { i32, i32 }, ptr %o0, i32 0, i32 1
  %t3 = load i32, ptr %t2
  store i32 %t3, ptr %o3
  %t4 = load i32, ptr %o2
  %t5 = getelementptr { i32, i32 }, ptr %o4, i32 0, i32 1
  store i32 %t4, ptr %t5
  %t6 = load i32, ptr %o3
  %t7 = getelementptr { i32, i32 }, ptr %o4, i32 0, i32 0
  store i32 %t6, ptr %t7
  %t8 = getelementptr { i32, i32 }, ptr %o4, i32 0, i32 0
  %t9 = load i32, ptr %t8
  %t10 = getelementptr { i32, i32 }, ptr %o4, i32 0, i32 1
  %t11 = load i32, ptr %t10
  %t12 = mul i32 %t9, %t11
  store i32 %t12, ptr %o1
  %t13 = load i32, ptr %o1
  ret i32 %t13
}

define i32 @main() {
entry:
  call void @flow_main()
  ret i32 0
}
