crates/flow-backend-llvm/tests/snapshots/golden_ll__example_calc.snap
---
source: crates/flow-backend-llvm/tests/golden_ll.rs
expression: ll
---
; flow-backend-llvm emitted module
declare void @flow_print_i32(i32, i1 zeroext)
declare void @flow_print_i64(i64, i1 zeroext)
declare void @flow_print_u8(i8 zeroext, i1 zeroext)
declare void @flow_print_bool(i1 zeroext, i1 zeroext)
declare void @flow_print_f32(float, i1 zeroext)
declare void @flow_print_f64(double, i1 zeroext)
declare void @flow_print_str(ptr, i64, i1 zeroext)
declare void @flow_trap(i32) noreturn
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)

@.str0 = private unnamed_addr constant [9 x i8] c"20 + 6 = "
@.str1 = private unnamed_addr constant [9 x i8] c"20 - 6 = "
@.str2 = private unnamed_addr constant [9 x i8] c"20 * 6 = "
@.str3 = private unnamed_addr constant [9 x i8] c"20 / 6 = "
@.str4 = private unnamed_addr constant [9 x i8] c"20 % 6 = "

define internal i32 @fn0({ i32, i32, i32 } %arg) {
entry:
  %o0 = alloca { i32, i32, i32 }
  %o1 = alloca i32
  %o2 = alloca i32
  %o3 = alloca i32
  %o4 = alloca i32
  %o5 = alloca { i32, i32 }
  %o6 = alloca i1
  %o7 = alloca { i32, i32 }
  %o8 = alloca i1
  %o9 = alloca { i32, i32 }
  %o10 = alloca i1
  %o11 = alloca { i32, i32 }
  %o12 = alloca i1
  %o13 = alloca { i32, i32 }
  %o14 = alloca i32
  %o15 = alloca { i32, i32 }
  %o16 = alloca i32
  %o17 = alloca { i32, i32 }
  %o18 = alloca i32
  %o19 = alloca { i32, i32 }
  %o20 = alloca i32
  %o21 = alloca { i32, i32 }
  %o22 = alloca i32
  %o23 = alloca { i32, i32, i1 }
  %o24 = alloca i32
  %o25 = alloca { i32, i32, i1 }
  %o26 = alloca i32
  %o27 = alloca { i32, i32, i1 }
  %o28 = alloca i32
  %o29 = alloca { i32, i32, i1 }
  store { i32, i32, i32 } %arg, ptr %o0
  %t0 = getelementptr { i32, i32, i32 }, ptr %o0, i32 0, i32 0
  %t1 = load i32, ptr %t0
  store i32 %t1, ptr %o2
  %t2 = getelementptr { i32, i32, i32 }, ptr %o0, i32 0, i32 1
  %t3 = load i32, ptr %t2
  store i32 %t3, ptr %o3
  %t4 = getelementptr { i32, i32, i32 }, ptr %o0, i32 0, i32 2
  %t5 = load i32, ptr %t4
  store i32 %t5, ptr %o4
  %t6 = getelementptr { i32, i32 }, ptr %o5, i32 0, i32 1
  store i32 0, ptr %t6
  %t7 = getelementptr { i32, i32 }, ptr %o7, i32 0, i32 1
  store i32 1, ptr %t7
  %t8 = getelementptr { i32, i32 }, ptr %o9, i32 0, i32 1
  store i32 2, ptr %t8
  %t9 = getelementptr { i32, i32 }, ptr %o11, i32 0, i32 1
  store i32 3, ptr %t9
  %t10 = load i32, ptr %o2
  %t11 = getelementptr { i32, i32 }, ptr %o5, i32 0, i32 0
  store i32 %t10, ptr %t11
  %t12 = load i32, ptr %o2
  %t13 = getelementptr { i32, i32 }, ptr %o7, i32 0, i32 0
  store i32 %t12, ptr %t13
  %t14 = load i32, ptr %o2
  %t15 = getelementptr { i32, i32 }, ptr %o9, i32 0, i32 0
  store i32 %t14, ptr %t15
  %t16 = load i32, ptr %o2
  %t17 = getelementptr { i32, i32 }, ptr %o11, i32 0, i32 0
  store i32 %t16, ptr %t17
  %t18 = load i32, ptr %o3
  %t19 = getelementptr { i32, i32 }, ptr %o13, i32 0, i32 0
  store i32 %t18, ptr %t19
  %t20 = load i32, ptr %o3
  %t21 = getelementptr { i32, i32 }, ptr %o15, i32 0, i32 0
  store i32 %t20, ptr %t21
  %t22 = load i32, ptr %o3
  %t23 = getelementptr { i32, i32 }, ptr %o17, i32 0, i32 0
  store i32 %t22, ptr %t23
  %t24 = load i32, ptr %o3
  %t25 = getelementptr { i32, i32 }, ptr %o19, i32 0, i32 0
  store i32 %t24, ptr %t25
  %t26 = load i32, ptr %o3
  %t27 = getelementptr { i32, i32 }, ptr %o21, i32 0, i32 0
  store i32 %t26, ptr %t27
  %t28 = load i32, ptr %o4
  %t29 = getelementptr { i32, i32 }, ptr %o13, i32 0, i32 1
  store i32 %t28, ptr %t29
  %t30 = load i32, ptr %o4
  %t31 = getelementptr { i32, i32 }, ptr %o15, i32 0, i32 1
  store i32 %t30, ptr %t31
  %t32 = load i32, ptr %o4
  %t33 = getelementptr { i32, i32 }, ptr %o17, i32 0, i32 1
  store i32 %t32, ptr %t33
  %t34 = load i32, ptr %o4
  %t35 = getelementptr { i32, i32 }, ptr %o19, i32 0, i32 1
  store i32 %t34, ptr %t35
  %t36 = load i32, ptr %o4
  %t37 = getelementptr { i32, i32 }, ptr %o21, i32 0, i32 1
  store i32 %t36, ptr %t37
  %t38 = getelementptr { i32, i32 }, ptr %o5, i32 0, i32 0
  %t39 = load i32, ptr %t38
  %t40 = getelementptr { i32, i32 }, ptr %o5, i32 0, i32 1
  %t41 = load i32, ptr %t40
  %t42 = icmp eq i32 %t39, %t41
  store i1 %t42, ptr %o6
  %t43 = getelementptr { i32, i32 }, ptr %o7, i32 0, i32 0
  %t44 = load i32, ptr %t43
  %t45 = getelementptr { i32, i32 }, ptr %o7, i32 0, i32 1
  %t46 = load i32, ptr %t45
  %t47 = icmp eq i32 %t44, %t46
  store i1 %t47, ptr %o8
  %t48 = getelementptr { i32, i32 }, ptr %o9, i32 0, i32 0
  %t49 = load i32, ptr %t48
  %t50 = getelementptr { i32, i32 }, ptr %o9, i32 0, i32 1
  %t51 = load i32, ptr %t50
  %t52 = icmp eq i32 %t49, %t51
  store i1 %t52, ptr %o10
  %t53 = getelementptr { i32, i32 }, ptr %o11, i32 0, i32 0
  %t54 = load i32, ptr %t53
  %t55 = getelementptr { i32, i32 }, ptr %o11, i32 0, i32 1
  %t56 = load i32, ptr %t55
  %t57 = icmp eq i32 %t54, %t56
  store i1 %t57, ptr %o12
  %t58 = getelementptr { i32, i32 }, ptr %o13, i32 0, i32 0
  %t59 = load i32, ptr %t58
  %t60 = getelementptr { i32, i32 }, ptr %o13, i32 0, i32 1
  %t61 = load i32, ptr %t60
  %t62 = add i32 %t59, %t61
  store i32 %t62, ptr %o14
  %t63 = getelementptr { i32, i32 }, ptr %o15, i32 0, i32 0
  %t64 = load i32, ptr %t63
  %t65 = getelementptr { i32, i32 }, ptr %o15, i32 0, i32 1
  %t66 = load i32, ptr %t65
  %t67 = sub i32 %t64, %t66
  store i32 %t67, ptr %o16
  %t68 = getelementptr { i32, i32 }, ptr %o17, i32 0, i32 0
  %t69 = load i32, ptr %t68
  %t70 = getelementptr { i32, i32 }, ptr %o17, i32 0, i32 1
  %t71 = load i32, ptr %t70
  %t72 = mul i32 %t69, %t71
  store i32 %t72, ptr %o18
  %t73 = getelementptr { i32, i32 }, ptr %o19, i32 0, i32 0
  %t74 = load i32, ptr %t73
  %t75 = getelementptr { i32, i32 }, ptr %o19, i32 0, i32 1
  %t76 = load i32, ptr %t75
  %t77 = icmp eq i32 %t76, 0
  br i1 %t77, label %bb78, label %bb79
bb78:
  call void @flow_trap(i32 0)
  unreachable
bb79:
  %t80 = icmp eq i32 %t76, -1
  %t81 = icmp eq i32 %t74, -2147483648
  %t82 = and i1 %t80, %t81
  br i1 %t82, label %bb83, label %bb84
bb83:
  store i32 -2147483648, ptr %o20
  br label %bb85
bb84:
  %t86 = sdiv i32 %t74, %t76
  store i32 %t86, ptr %o20
  br label %bb85
bb85:
  %t87 = getelementptr { i32, i32 }, ptr %o21, i32 0, i32 0
  %t88 = load i32, ptr %t87
  %t89 = getelementptr { i32, i32 }, ptr %o21, i32 0, i32 1
  %t90 = load i32, ptr %t89
  %t91 = icmp eq i32 %t90, 0
  br i1 %t91, label %bb92, label %bb93
bb92:
  call void @flow_trap(i32 0)
  unreachable
bb93:
  %t94 = icmp eq i32 %t90, -1
  %t95 = icmp eq i32 %t88, -2147483648
  %t96 = and i1 %t94, %t95
  br i1 %t96, label %bb97, label %bb98
bb97:
  store i32 0, ptr %o22
  br label %bb99
bb98:
  %t100 = srem i32 %t88, %t90
  store i32 %t100, ptr %o22
  br label %bb99
bb99:
  %t101 = load i1, ptr %o6
  %t102 = getelementptr { i32, i32, i1 }, ptr %o29, i32 0, i32 2
  store i1 %t101, ptr %t102
  %t103 = load i1, ptr %o8
  %t104 = getelementptr { i32, i32, i1 }, ptr %o27, i32 0, i32 2
  store i1 %t103, ptr %t104
  %t105 = load i1, ptr %o10
  %t106 = getelementptr { i32, i32, i1 }, ptr %o25, i32 0, i32 2
  store i1 %t105, ptr %t106
  %t107 = load i1, ptr %o12
  %t108 = getelementptr { i32, i32, i1 }, ptr %o23, i32 0, i32 2
  store i1 %t107, ptr %t108
  %t109 = load i32, ptr %o14
  %t110 = getelementptr { i32, i32, i1 }, ptr %o29, i32 0, i32 0
  store i32 %t109, ptr %t110
  %t111 = load i32, ptr %o16
  %t112 = getelementptr { i32, i32, i1 }, ptr %o27, i32 0, i32 0
  store i32 %t111, ptr %t112
  %t113 = load i32, ptr %o18
  %t114 = getelementptr { i32, i32, i1 }, ptr %o25, i32 0, i32 0
  store i32 %t113, ptr %t114
  %t115 = load i32, ptr %o20
  %t116 = getelementptr { i32, i32, i1 }, ptr %o23, i32 0, i32 0
  store i32 %t115, ptr %t116
  %t117 = load i32, ptr %o22
  %t118 = getelementptr { i32, i32, i1 }, ptr %o23, i32 0, i32 1
  store i32 %t117, ptr %t118
  %t119 = getelementptr { i32, i32, i1 }, ptr %o23, i32 0, i32 0
  %t120 = load i32, ptr %t119
  %t121 = getelementptr { i32, i32, i1 }, ptr %o23, i32 0, i32 1
  %t122 = load i32, ptr %t121
  %t123 = getelementptr { i32, i32, i1 }, ptr %o23, i32 0, i32 2
  %t124 = load i1, ptr %t123
  %t125 = select i1 %t124, i32 %t120, i32 %t122
  store i32 %t125, ptr %o24
  %t126 = load i32, ptr %o24
  %t127 = getelementptr { i32, i32, i1 }, ptr %o25, i32 0, i32 1
  store i32 %t126, ptr %t127
  %t128 = getelementptr { i32, i32, i1 }, ptr %o25, i32 0, i32 0
  %t129 = load i32, ptr %t128
  %t130 = getelementptr { i32, i32, i1 }, ptr %o25, i32 0, i32 1
  %t131 = load i32, ptr %t130
  %t132 = getelementptr { i32, i32, i1 }, ptr %o25, i32 0, i32 2
  %t133 = load i1, ptr %t132
  %t134 = select i1 %t133, i32 %t129, i32 %t131
  store i32 %t134, ptr %o26
  %t135 = load i32, ptr %o26
  %t136 = getelementptr { i32, i32, i1 }, ptr %o27, i32 0, i32 1
  store i32 %t135, ptr %t136
  %t137 = getelementptr { i32, i32, i1 }, ptr %o27, i32 0, i32 0
  %t138 = load i32, ptr %t137
  %t139 = getelementptr { i32, i32, i1 }, ptr %o27, i32 0, i32 1
  %t140 = load i32, ptr %t139
  %t141 = getelementptr { i32, i32, i1 }, ptr %o27, i32 0, i32 2
  %t142 = load i1, ptr %t141
  %t143 = select i1 %t142, i32 %t138, i32 %t140
  store i32 %t143, ptr %o28
  %t144 = load i32, ptr %o28
  %t145 = getelementptr { i32, i32, i1 }, ptr %o29, i32 0, i32 1
  store i32 %t144, ptr %t145
  %t146 = getelementptr { i32, i32, i1 }, ptr %o29, i32 0, i32 0
  %t147 = load i32, ptr %t146
  %t148 = getelementptr { i32, i32, i1 }, ptr %o29, i32 0, i32 1
  %t149 = load i32, ptr %t148
  %t150 = getelementptr { i32, i32, i1 }, ptr %o29, i32 0, i32 2
  %t151 = load i1, ptr %t150
  %t152 = select i1 %t151, i32 %t147, i32 %t149
  store i32 %t152, ptr %o1
  %t153 = load i32, ptr %o1
  ret i32 %t153
}

define internal void @flow_main() {
entry:
  %o2 = alloca { i32, i32, i32 }
  %o3 = alloca i32
  %o6 = alloca i32
  %o8 = alloca { i32, i32, i32 }
  %o9 = alloca i32
  %o12 = alloca i32
  %o14 = alloca { i32, i32, i32 }
  %o15 = alloca i32
  %o18 = alloca i32
  %o20 = alloca { i32, i32, i32 }
  %o21 = alloca i32
  %o24 = alloca i32
  %o26 = alloca { i32, i32, i32 }
  %o27 = alloca i32
  %o30 = alloca i32
  %t0 = getelementptr { i32, i32, i32 }, ptr %o2, i32 0, i32 0
  store i32 0, ptr %t0
  %t1 = getelementptr { i32, i32, i32 }, ptr %o2, i32 0, i32 1
  store i32 20, ptr %t1
  %t2 = getelementptr { i32, i32, i32 }, ptr %o2, i32 0, i32 2
  store i32 6, ptr %t2
  %t3 = getelementptr { i32, i32, i32 }, ptr %o8, i32 0, i32 0
  store i32 1, ptr %t3
  %t4 = getelementptr { i32, i32, i32 }, ptr %o8, i32 0, i32 1
  store i32 20, ptr %t4
  %t5 = getelementptr { i32, i32, i32 }, ptr %o8, i32 0, i32 2
  store i32 6, ptr %t5
  %t6 = getelementptr { i32, i32, i32 }, ptr %o14, i32 0, i32 0
  store i32 2, ptr %t6
  %t7 = getelementptr { i32, i32, i32 }, ptr %o14, i32 0, i32 1
  store i32 20, ptr %t7
  %t8 = getelementptr { i32, i32, i32 }, ptr %o14, i32 0, i32 2
  store i32 6, ptr %t8
  %t9 = getelementptr { i32, i32, i32 }, ptr %o20, i32 0, i32 0
  store i32 3, ptr %t9
  %t10 = getelementptr { i32, i32, i32 }, ptr %o20, i32 0, i32 1
  store i32 20, ptr %t10
  %t11 = getelementptr { i32, i32, i32 }, ptr %o20, i32 0, i32 2
  store i32 6, ptr %t11
  %t12 = getelementptr { i32, i32, i32 }, ptr %o26, i32 0, i32 0
  store i32 4, ptr %t12
  %t13 = getelementptr { i32, i32, i32 }, ptr %o26, i32 0, i32 1
  store i32 20, ptr %t13
  %t14 = getelementptr { i32, i32, i32 }, ptr %o26, i32 0, i32 2
  store i32 6, ptr %t14
  %t15 = load { i32, i32, i32 }, ptr %o2
  %t16 = call i32 @fn0({ i32, i32, i32 } %t15)
  store i32 %t16, ptr %o3
  call void @flow_print_str(ptr @.str0, i64 9, i1 zeroext false)
  %t17 = load { i32, i32, i32 }, ptr %o8
  %t18 = call i32 @fn0({ i32, i32, i32 } %t17)
  store i32 %t18, ptr %o9
  %t19 = load { i32, i32, i32 }, ptr %o14
  %t20 = call i32 @fn0({ i32, i32, i32 } %t19)
  store i32 %t20, ptr %o15
  %t21 = load { i32, i32, i32 }, ptr %o20
  %t22 = call i32 @fn0({ i32, i32, i32 } %t21)
  store i32 %t22, ptr %o21
  %t23 = load { i32, i32, i32 }, ptr %o26
  %t24 = call i32 @fn0({ i32, i32, i32 } %t23)
  store i32 %t24, ptr %o27
  %t25 = load i32, ptr %o3
  store i32 %t25, ptr %o6
  %t26 = load i32, ptr %o9
  store i32 %t26, ptr %o12
  %t27 = load i32, ptr %o15
  store i32 %t27, ptr %o18
  %t28 = load i32, ptr %o21
  store i32 %t28, ptr %o24
  %t29 = load i32, ptr %o27
  store i32 %t29, ptr %o30
  %t30 = load i32, ptr %o6
  call void @flow_print_i32(i32 %t30, i1 zeroext true)
  call void @flow_print_str(ptr @.str1, i64 9, i1 zeroext false)
  %t31 = load i32, ptr %o12
  call void @flow_print_i32(i32 %t31, i1 zeroext true)
  call void @flow_print_str(ptr @.str2, i64 9, i1 zeroext false)
  %t32 = load i32, ptr %o18
  call void @flow_print_i32(i32 %t32, i1 zeroext true)
  call void @flow_print_str(ptr @.str3, i64 9, i1 zeroext false)
  %t33 = load i32, ptr %o24
  call void @flow_print_i32(i32 %t33, i1 zeroext true)
  call void @flow_print_str(ptr @.str4, i64 9, i1 zeroext false)
  %t34 = load i32, ptr %o30
  call void @flow_print_i32(i32 %t34, i1 zeroext true)
  ret void
}

define i32 @main() {
entry:
  call void @flow_main()
  ret i32 0
}
