crates/flow-backend-llvm/tests/snapshots/golden_ll__example_pipeline.snap
---
source: crates/flow-backend-llvm/tests/golden_ll.rs
expression: ll
---
; flow-backend-llvm emitted module
declare void @flow_print_i32(i32, i1 zeroext)
declare void @flow_print_i64(i64, i1 zeroext)
declare void @flow_print_u8(i8 zeroext, i1 zeroext)
declare void @flow_print_bool(i1 zeroext, i1 zeroext)
declare void @flow_print_f32(float, i1 zeroext)
declare void @flow_print_f64(double, i1 zeroext)
declare void @flow_print_str(ptr, i64, i1 zeroext)
declare void @flow_trap(i32)
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)

@.str0 = private unnamed_addr constant [8 x i8] c"f(10) = "

define internal i32 @fn0(i32 %arg) {
entry:
  %o0 = alloca i32
  %o1 = alloca i32
  %o2 = alloca { i32, i32 }
  %o3 = alloca i32
  %o4 = alloca { i32, i32 }
  store i32 %arg, ptr %o0
  %t0 = load i32, ptr %o0
  %t1 = getelementptr { i32, i32 }, ptr %o2, i32 0, i32 0
  store i32 %t0, ptr %t1
  %t2 = getelementptr { i32, i32 }, ptr %o2, i32 0, i32 1
  store i32 2, ptr %t2
  %t3 = getelementptr { i32, i32 }, ptr %o4, i32 0, i32 1
  store i32 5, ptr %t3
  %t4 = getelementptr { i32, i32 }, ptr %o2, i32 0, i32 0
  %t5 = load i32, ptr %t4
  %t6 = getelementptr { i32, i32 }, ptr %o2, i32 0, i32 1
  %t7 = load i32, ptr %t6
  %t8 = mul i32 %t5, %t7
  store i32 %t8, ptr %o3
  %t9 = load i32, ptr %o3
  %t10 = getelementptr { i32, i32 }, ptr %o4, i32 0, i32 0
  store i32 %t9, ptr %t10
  %t11 = getelementptr { i32, i32 }, ptr %o4, i32 0, i32 0
  %t12 = load i32, ptr %t11
  %t13 = getelementptr { i32, i32 }, ptr %o4, i32 0, i32 1
  %t14 = load i32, ptr %t13
  %t15 = add i32 %t12, %t14
  store i32 %t15, ptr %o1
  %t16 = load i32, ptr %o1
  ret i32 %t16
}

define internal void @flow_main() {
entry:
  %o2 = alloca i32
  %o5 = alloca i32
  %t0 = call i32 @fn0(i32 10)
  store i32 %t0, ptr %o2
  %t1 = load i32, ptr %o2
  store i32 %t1, ptr %o5
  call void @flow_print_str(ptr @.str0, i64 8, i1 zeroext false)
  %t2 = load i32, ptr %o5
  call void @flow_print_i32(i32 %t2, i1 zeroext true)
  ret void
}

define i32 @main() {
entry:
  call void @flow_main()
  ret i32 0
}
